# my_learnopengl

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
include/: camera.h  shader.h
include/glad/: glad.h
shader/: texture_shader.fs
src/: camera.cpp  fragment_shader.txt  glad.c  main.cpp  shader.cpp
